# mo_doc_guard

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: dev-sanity.yml  pipeline-langgraph.yml
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  registry.py  router.py
app/connectors/: __init__.py  docs_repo_sync.py  github_pr.py  matrixone_evidence.py  mcp_agent_client.py  model_router.py
app/connectors/providers/: __init__.py
app/core/: __init__.py  phase7_metrics.py  quality_gate.py  run_state.py  settings.py
app/graph/: langgraph_workflow.py  state.py  workflow.py
app/mcp_gateway/: __init__.py  server.py
app/retrieval/: __init__.py  incremental_scope.py
app/skills/: __init__.py  mo_doc_reviewer.py  mo_doc_writer.py
configs/: agents.yaml  models.yaml  path_mapping.yaml  prompts.yaml  quality_gates.yaml
docs/: dev-environment-handoff.md  runbook.md
scripts/: generate_metrics_report.py  setup_dev.sh
tests/: test_agent_plugins.py  test_github_pr_connector.py  test_langgraph_workflow.py  test_matrixone_evidence_connector.py  test_mcp_gateway.py  test_phase7_metrics.py  test_provider_router.py  test_quality_gate.py  test_reviewer_skill.py  test_settings_scope.py  test_workflow_pipeline.py  test_writer_skill.py
