[project]
name = "docs-agent-ops"
version = "0.1.0"
description = "MatrixOne docs automation runner"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "pydantic>=2.9.0",
  "pyyaml>=6.0.2",
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py311"
